Trying to fix swiper lag on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -39,16 +39,11 @@ html {
 }
 
 .proj-card {
-    transition: all 0.15s;
+    transition: none;
 }
 
 .proj-card:hover > a > img {
     filter: grayscale(0);
-}
-
-.proj-card:hover {
-    background-color: rgb(82 82 82);
-    filter: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
 }
 
 .router-slide > div {
